--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -18,11 +18,11 @@
      ansible.builtin.dnf:                                  # it is equal to apt
        name: httpd
        status: present
-     when: ansible_os_family == 'redHat'
+     when: ansible_os_family == 'RedHat'
 
    - name: running server 
      service:
        name:  httpd
        state: started
-     when: ansible_os_family == 'redHat'
+     when: ansible_os_family == 'RedHat'
           
