--- a/myjavaservers.yml
+++ b/myjavaservers.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: mywebservers
-  become: yes
+  become: yes                # use myhostswithvars inventory (or) myhosts(it will work bcz we declared all vars in mywebservers file )
   tasks:
     - name: installing java on ubuntu
       apt:
