--- a/myhostwebser.yml
+++ b/myhostwebser.yml
@@ -2,8 +2,8 @@
 - hosts: node0@172.31.31.23
   become: yes
   vars: 
-    myvars01: git
-    myvars02: tree
+    myvars01: git                            # local variable
+    myvars02: tree                           # local variable
   tasks:
     - name: Iwant to dispaly my vars01
       debug:
