--- a/regis_stderr.yml
+++ b/regis_stderr.yml
@@ -10,11 +10,11 @@
       debug:
         msg: "{{myfirsttaskresult}}"
 
-    - name: install git                          # Deciding to install git or tree based on result of 'myfirsttaskresult'
+    - name: install git                         # Deciding to install git or tree based on result of 'myfirsttaskresult
       apt:
         name: git
         state: present
-      when: myfirsttaskresult.stderr= ''   # This means no error while executing command
+      when: myfirsttaskresult.stderr = ''   # This means no error while executing command
 
     - name: install tree
       apt:
