--- a/regis_stderr.yml
+++ b/regis_stderr.yml
@@ -8,16 +8,16 @@
 
     - name: debug 1st task result
       debug:
-        msg: "{{myfirsttaskresult}}"
+        msg: "{{myfirsttaskresult}}"        # we can see stdout & stderr we can choose any of them to decide our next task
 
     - name: install git                 # Deciding to install git or tree based on result of myfirsttaskresult
       apt:
         name: git
         state: present
-      when: myfirsttaskresult.stderr==""  # This means no error while executing command
+      when: myfirsttaskresult.stderr==""  # we are selecting stderr from output of 'command'
 
     - name: install tree
       apt:
         name: tree
         state: present
-      when: myfirsttaskresult.stderr!=""   # This means no error while executing command
+      when: myfirsttaskresult.stderr!=""   # This means error while executing command
