--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -11,4 +11,4 @@
   - name: copy index file to node side
     copy:
       src: index.html
-      dest: /var/www/html/cafe
+      dest: /var/www/html/index.html
