--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -12,3 +12,9 @@
     copy:
       src: index.html
       dest: /var/www/html/index.html
+
+  - name: downloading internet files
+    get_url:
+      url: https://dlcdn.apache.org/tomcat/tomcat-10/v10.1.13/bin/apache-tomcat-10.1.13.tar.gz
+      dest: home/ubuntu/apache-tomcat-10.1.13.tar.gz
+      force_basic_auth: yes
