--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -18,3 +18,8 @@
       url: https://dlcdn.apache.org/tomcat/tomcat-10/v10.1.13/bin/apache-tomcat-10.1.13.tar.gz
       dest: home/ubuntu/apache-tomcat-10.1.13.tar.gz
       force_basic_auth: yes
+
+  - name: copying dynamic file into nodes
+    template:
+      src: myindex.j2
+      dest: /var/www/html/index.html
