--- a/myfilehandling.yml
+++ b/myfilehandling.yml
@@ -21,5 +21,5 @@
 
   - name: copying dynamic file into nodes
     template:
-      src: myindex.j2
+      src: myindex.j2                      # this will replace above index.html file in node0
       dest: /var/www/html/index.html
