--- a/mytomrole/tasks/main.yml
+++ b/mytomrole/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
-# tasks file for mytomrole
 - include_tasks: myuser.yml
 - include_tasks: installjava.yml
 - include_tasks: download.yml
 - include_tasks: permissions.yml
+- include_tasks: tomdashboard.yml
+- include_tasks: mytomstart.yml
+- include_tasks: mydeploy.yml
+
+# tasks file for mytomrole
