--- a/mytomrole/tasks/download.yml
+++ b/mytomrole/tasks/download.yml
@@ -2,7 +2,7 @@
 - name: downloading tomcat
   get_url:
     url: https://dlcdn.apache.org/tomcat/tomcat-10/v10.1.13/bin/apache-tomcat-10.1.13.tar.gz
-    dest: /home/ubuntu/
+    dest: /home/ubuntu/apache-tomcat-10.0.20.tar.gz
     force_basic_auth: yes
 
 - name:  create a directory
@@ -12,7 +12,7 @@
 
 - name: extract tar file
   command:
-    cmd: sudo tar xzvf apache-tomcat-10*tar.gz -C /opt/tomcat --strip-components=1
+    cmd: sudo tar xzvf /home/ubuntu/apache-tomcat-10.0.20.tar.gz -C /opt/tomcat --strip-components=1
     creates: /opt/tomcat/LICENCE
    
 # or we can use unarchive module
