--- a/mytomrole/tasks/main.yml
+++ b/mytomrole/tasks/main.yml
@@ -4,7 +4,7 @@
 - include_tasks: download.yml
 - include_tasks: permissions.yml
 - include_tasks: tomdashboard.yml
-- include_tasks: mytomstart.yml
+- include_tasks: tomstart.yml
 - include_tasks: mydeploy.yml
 
 # tasks file for mytomrole
